--- a/src/components/Song/song.module.css
+++ b/src/components/Song/song.module.css
@@ -1,5 +1,6 @@
 .center {
   display: flex;
+  max-width: 960px;
   flex-direction: column;
   text-align: center;
   height: 300px;
@@ -10,6 +11,7 @@
 }
 
 .image {
-  width: 225px;
-  height: 225px;
+  margin: 0 auto;
+  width: 240px;
+  height: 240px;
 }
